--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "12.1.0",
+    "next-mdx-remote": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.0",
+    "react-syntax-highlighter": "^15.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
