--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-syntax-highlighter": "^15.4.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
