--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "mongodb": "^4.4.1",
     "next": "12.1.0",
     "next-mdx-remote": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.0",
-    "react-syntax-highlighter": "^15.4.5"
+    "react-syntax-highlighter": "^15.4.5",
+    "sharp": "^0.30.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
