--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^4.4.1",
     "next": "12.1.0",
     "next-mdx-remote": "^4.0.0",
+    "next-seo": "^5.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
