Add rss feed dependency

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "mongodb": "^4.4.1",
     "next": "12.1.0",
